infra/kustomize/base/media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media
  labels:
    app.kubernetes.io/name: media
    app.kubernetes.io/part-of: threshold
spec:
  selector:
    app.kubernetes.io/name: media
  ports:
    - name: http
      port: 80
      targetPort: http
